--- a/platformio.ini
+++ b/platformio.ini
@@ -11,5 +11,7 @@
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
-framework = espidf
+framework = arduino
+lib_deps =
+    DHT sensor library@1.3.8
 
