--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu-32s]
-platform = espressif32
-board = nodemcu-32s
+[env:uno]
+platform = atmelavr
+board = uno
 framework = arduino
-lib_deps =
-    DHT sensor library@1.3.8
-    Adafruit Unified Sensor@1.1.1
 
+lib_deps =
+  DHT sensor library@1.3.8
+  Adafruit Unified Sensor@1.1.1
